# cmake_tutorial

./: README.md
episode3/: CMakeLists.txt  main.cc
episode4/: CMakeLists.txt  runhello.sh
episode4/src/: CMakeLists.txt
episode5/: CMakeLists.txt
episode5/lib/: CMakeLists.txt  hello.cc  hello.hpp
episode6/: README.md
episode6/src/: main.cc
episode7/: CMakeLists.txt  main.cpp
episode7/config/detect/: detect.yaml
episode7/modules/: CMakeLists.txt
episode7/modules/cv/: cv.cpp  cv.hpp
src/: CMakeLists.txt
第一集/: CMakeLists.txt  Makefile  Makefile.md  main  main.cc
第二集/: CMakeLists.txt  main.cc
